--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
 /*  Add your styling here */
+.display-flex{
+  display: flex;
+  
+}
+.align-items-flex-end{
+  align-self: flex-end;
+  
+  
+}
+.justify-spacer-around{
+justify-content: space-around;
+}
+
+.right{
+  display: flex;
+  align-self: flex-start;
+}
